// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders correctly 1`] = `
<DocumentFragment>
  .cache-11umsq8-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-11umsq8-RadioContainer[aria-disabled='false'],
.cache-11umsq8-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  fill: #521094;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #e5dbfd;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  fill: #b3144d;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffd3e3;
}

.cache-11umsq8-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-11umsq8-RadioContainer[aria-disabled='true']>label,
.cache-11umsq8-RadioContainer[aria-disabled='true'] .ehkrmld1 {
  cursor: not-allowed;
}

.cache-11umsq8-RadioContainer[aria-disabled='true'] .ehkrmld2 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-11umsq8-RadioContainer[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-r6hifg-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-r6hifg-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-r6hifg-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-r6hifg-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-r6hifg-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #e51963;
}

.cache-r6hifg-RadioInput:focus+.ehkrmld2 {
  background-color: #5e127e40;
  fill: #521094;
}

.cache-r6hifg-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-r6hifg-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-r6hifg-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-bw8u3u-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-bw8u3u-Ring .ehkrmld4 {
  fill: #ffffff;
}

<div
    aria-disabled="false"
    class="cache-11umsq8-RadioContainer ehkrmld0"
    data-checked="false"
  >
    <input
      aria-disabled="false"
      aria-invalid="false"
      class="cache-r6hifg-RadioInput ehkrmld1"
      id="radio-choice"
      name="radio"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-bw8u3u-Ring ehkrmld2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="10"
          stroke-width="2"
        />
        <circle
          class="cache-1niv4ql-InnerCircleRing ehkrmld4"
          cx="12"
          cy="12"
          r="8"
        />
        <circle
          class="cache-ivayk3-RadioMark ehkrmld3"
          cx="12"
          cy="12"
          r="5"
        />
      </g>
    </svg>
    <label
      for="radio-choice"
    >
      Choice
    </label>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-11umsq8-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-11umsq8-RadioContainer[aria-disabled='false'],
.cache-11umsq8-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  fill: #521094;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #e5dbfd;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  fill: #b3144d;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffd3e3;
}

.cache-11umsq8-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-11umsq8-RadioContainer[aria-disabled='true']>label,
.cache-11umsq8-RadioContainer[aria-disabled='true'] .ehkrmld1 {
  cursor: not-allowed;
}

.cache-11umsq8-RadioContainer[aria-disabled='true'] .ehkrmld2 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-11umsq8-RadioContainer[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-r6hifg-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-r6hifg-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-r6hifg-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-r6hifg-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-r6hifg-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #e51963;
}

.cache-r6hifg-RadioInput:focus+.ehkrmld2 {
  background-color: #5e127e40;
  fill: #521094;
}

.cache-r6hifg-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-r6hifg-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-r6hifg-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-bw8u3u-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-bw8u3u-Ring .ehkrmld4 {
  fill: #ffffff;
}

<div
    aria-disabled="false"
    class="cache-11umsq8-RadioContainer ehkrmld0"
    data-checked="true"
  >
    <input
      aria-disabled="false"
      aria-invalid="false"
      checked=""
      class="cache-r6hifg-RadioInput ehkrmld1"
      id="radio-choice"
      name="radio"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-bw8u3u-Ring ehkrmld2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="10"
          stroke-width="2"
        />
        <circle
          class="cache-1niv4ql-InnerCircleRing ehkrmld4"
          cx="12"
          cy="12"
          r="8"
        />
        <circle
          class="cache-ivayk3-RadioMark ehkrmld3"
          cx="12"
          cy="12"
          r="5"
        />
      </g>
    </svg>
    <label
      for="radio-choice"
    >
      Choice
    </label>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-11umsq8-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-11umsq8-RadioContainer[aria-disabled='false'],
.cache-11umsq8-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  fill: #521094;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #e5dbfd;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  fill: #b3144d;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffd3e3;
}

.cache-11umsq8-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-11umsq8-RadioContainer[aria-disabled='true']>label,
.cache-11umsq8-RadioContainer[aria-disabled='true'] .ehkrmld1 {
  cursor: not-allowed;
}

.cache-11umsq8-RadioContainer[aria-disabled='true'] .ehkrmld2 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-11umsq8-RadioContainer[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-r6hifg-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-r6hifg-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-r6hifg-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-r6hifg-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-r6hifg-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #e51963;
}

.cache-r6hifg-RadioInput:focus+.ehkrmld2 {
  background-color: #5e127e40;
  fill: #521094;
}

.cache-r6hifg-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-r6hifg-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-r6hifg-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-bw8u3u-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-bw8u3u-Ring .ehkrmld4 {
  fill: #ffffff;
}

<div
    aria-disabled="true"
    class="cache-11umsq8-RadioContainer ehkrmld0"
    data-checked="false"
  >
    <input
      aria-disabled="true"
      aria-invalid="false"
      class="cache-r6hifg-RadioInput ehkrmld1"
      disabled=""
      id="radio-choice"
      name="radio"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-bw8u3u-Ring ehkrmld2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="10"
          stroke-width="2"
        />
        <circle
          class="cache-1niv4ql-InnerCircleRing ehkrmld4"
          cx="12"
          cy="12"
          r="8"
        />
        <circle
          class="cache-ivayk3-RadioMark ehkrmld3"
          cx="12"
          cy="12"
          r="5"
        />
      </g>
    </svg>
    <label
      for="radio-choice"
    >
      Choice
    </label>
  </div>
</DocumentFragment>
`;

exports[`Radio renders correctly when error 1`] = `
<DocumentFragment>
  .cache-11umsq8-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-11umsq8-RadioContainer[aria-disabled='false'],
.cache-11umsq8-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  fill: #521094;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #e5dbfd;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  fill: #b3144d;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffd3e3;
}

.cache-11umsq8-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-11umsq8-RadioContainer[aria-disabled='true']>label,
.cache-11umsq8-RadioContainer[aria-disabled='true'] .ehkrmld1 {
  cursor: not-allowed;
}

.cache-11umsq8-RadioContainer[aria-disabled='true'] .ehkrmld2 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-11umsq8-RadioContainer[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-r6hifg-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-r6hifg-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-r6hifg-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-r6hifg-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-r6hifg-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #e51963;
}

.cache-r6hifg-RadioInput:focus+.ehkrmld2 {
  background-color: #5e127e40;
  fill: #521094;
}

.cache-r6hifg-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-r6hifg-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-r6hifg-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-bw8u3u-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-bw8u3u-Ring .ehkrmld4 {
  fill: #ffffff;
}

<div
    aria-disabled="false"
    class="cache-11umsq8-RadioContainer ehkrmld0"
    data-checked="false"
    data-error="Invalid value"
  >
    <input
      aria-disabled="false"
      aria-invalid="true"
      class="cache-r6hifg-RadioInput ehkrmld1"
      id="radio-choice"
      name="radio"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-bw8u3u-Ring ehkrmld2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="10"
          stroke-width="2"
        />
        <circle
          class="cache-1niv4ql-InnerCircleRing ehkrmld4"
          cx="12"
          cy="12"
          r="8"
        />
        <circle
          class="cache-ivayk3-RadioMark ehkrmld3"
          cx="12"
          cy="12"
          r="5"
        />
      </g>
    </svg>
    <label
      for="radio-choice"
    >
      Choice
    </label>
  </div>
</DocumentFragment>
`;

exports[`Radio renders without name 1`] = `
<DocumentFragment>
  .cache-11umsq8-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-11umsq8-RadioContainer[aria-disabled='false'],
.cache-11umsq8-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  fill: #521094;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #e5dbfd;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  fill: #b3144d;
}

.cache-11umsq8-RadioContainer:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffd3e3;
}

.cache-11umsq8-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-11umsq8-RadioContainer[aria-disabled='true']>label,
.cache-11umsq8-RadioContainer[aria-disabled='true'] .ehkrmld1 {
  cursor: not-allowed;
}

.cache-11umsq8-RadioContainer[aria-disabled='true'] .ehkrmld2 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-11umsq8-RadioContainer[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-r6hifg-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-r6hifg-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-r6hifg-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-r6hifg-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-r6hifg-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #e51963;
}

.cache-r6hifg-RadioInput:focus+.ehkrmld2 {
  background-color: #5e127e40;
  fill: #521094;
}

.cache-r6hifg-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-r6hifg-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-r6hifg-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-bw8u3u-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-bw8u3u-Ring .ehkrmld4 {
  fill: #ffffff;
}

<div
    aria-disabled="true"
    class="cache-11umsq8-RadioContainer ehkrmld0"
    data-checked="false"
  >
    <input
      aria-disabled="true"
      aria-invalid="false"
      class="cache-r6hifg-RadioInput ehkrmld1"
      disabled=""
      id=":r2:-choice"
      name=":r2:"
      type="radio"
      value="choice"
    />
    <svg
      class="cache-bw8u3u-Ring ehkrmld2"
      size="24"
      viewBox="0 0 24 24"
    >
      <g>
        <circle
          cx="12"
          cy="12"
          r="10"
          stroke-width="2"
        />
        <circle
          class="cache-1niv4ql-InnerCircleRing ehkrmld4"
          cx="12"
          cy="12"
          r="8"
        />
        <circle
          class="cache-ivayk3-RadioMark ehkrmld3"
          cx="12"
          cy="12"
          r="5"
        />
      </g>
    </svg>
    <label
      for=":r2:-choice"
    >
      Choice
    </label>
  </div>
</DocumentFragment>
`;
